modified naming main blocks, red block's size and deleted checkbox

--- a/index.html
+++ b/index.html
@@ -22,30 +22,24 @@
                 <a href="#" class="header__item">Магазин</a>
                 <a href="#" class="header__item">Войти</a>
             </div>
-
         </header>
-        <input type="checkbox" name="burger" id="burger-checkbox">
-        <label for="burger-checkbox" class="burger-label">
+        <div class="burger">
             <div class="red-line"></div>
             <div class="red-line"></div>
             <div class="red-line"></div>
-        </label>
-        <section class="acquaintance-model-s">
-            <h1 class="acquaintance-model-s__heading">Model S</h1>
-            <p class="acquaintance-model-s__text standart-text">Добро пожаловать в будущее!</p>
-            <div class="acquaintance-model-s__tesla-background">
-
-            </div>
-
-            <img src="images/red-tesla.png" alt="Tesla Model S" class="acquaintance-model-s__tesla-img">
-
-            <div class="acquaintance-model-s__specification">
-                <div class="acquaintance-model-s__feature-wrapper">
-                    <div class="feature acquaintance-model-s__speed-statistic">
+        </div>
+        <section class="acquaintance-model">
+            <h1 class="acquaintance-model__heading">Model S</h1>
+            <p class="acquaintance-model__text standart-text">Добро пожаловать в будущее!</p>
+            <div class="acquaintance-model__tesla-background"></div>
+            <img src="images/red-tesla.png" alt="Tesla Model S" class="acquaintance-model__tesla-img">
+            <div class="acquaintance-model__specification">
+                <div class="acquaintance-model__feature-wrapper">
+                    <div class="feature acquaintance-model__speed-statistic">
                         <p><span class="big-bold-text">2,7</span> <span class="little-bold-text">сек</span></p>
                         <p class="small-discription-text">0-100 км/час</p>
                     </div>
-                    <div class="feature acquaintance-model-s__mileage-statistic">
+                    <div class="feature acquaintance-model__mileage-statistic">
                         <p><span class="big-bold-text">632</span> <span class="little-bold-text">км</span></p>
                         <p class="small-discription-text">Запас хода</p>
                     </div>
@@ -57,25 +51,25 @@
             </div>
             <img src="images/check.svg" alt="Go down" class="go-down-btn">
         </section>
-        <section class="comfort-model-s">
-            <div class="comfort-model-s__background"></div>
-            <h2 class="comfort-model-s__heading">Model S</h2>
-            <article class="comfort-model-s__topic">
+        <section class="comfort-model">
+            <div class="comfort-model__background"></div>
+            <h2 class="comfort-model__heading">Model S</h2>
+            <article class="comfort-model__topic">
                 <h3 class="topic-heading white-text">Будущее вождения</h3>
                 <p class="standart-text white-text">Модель S обладает лучшей в своем классе вместимостью:
                     в машине поместится до пяти взрослых и двух детей. Оснащена современным 17-дюймовым сенсорным экраном.
                     Усовершенствованная шумовая инженерия создает динамику звука, сравнимую с студией звукозаписи,
                     а стеклянная крыша обеспечивает просторный интерьер для каждого пассажира.</p>
-                <div class="comfort-model-s__feature-wrapper">
-                    <div class="feature comfort-model-s__display white-text">
+                <div class="comfort-model__feature-wrapper">
+                    <div class="feature comfort-model__display white-text">
                         <p class="little-bold-text"><span class="big-bold-text">17</span> дюймов</p>
                         <p class="small-discription-text">Большой дисплей</p>
                     </div>
-                    <div class="feature comfort-model-s__wifi white-text">
+                    <div class="feature comfort-model__wifi white-text">
                         <p class="little-bold-text">Беспроводное<br>обновление ПО</p>
                         <p class="small-discription-text">Повышенная функциональность</p>
                     </div>
-                    <div class="feature comfort-model-s__baggage-scope white-text">
+                    <div class="feature comfort-model__baggage-scope white-text">
                         <p class="little-bold-text"><span class="big-bold-text">894</span> литра</p>
                         <p class="small-discription-text">Объём грузового пространства</p>
                     </div>
@@ -86,37 +80,37 @@
                 </div>
             </article>
         </section>
-        <section class="safety-model-s">
-            <article class="safety-model-s__topic">
+        <section class="safety-model">
+            <article class="safety-model__topic">
                 <h3 class="topic-heading white-text">Самый безопасный автомобиль в мире</h3>
                 <p class="standart-text white-text">Модель S достигла наивысшей оценки безопасности любого автомобиля,
                     когда-либо испытанного, и установила рекорд по наименьшей вероятности травмы пассажиров -
                     от несчастных случаев на переднем, боковом, заднем сидении и в ДТП с переворотом авто.</p>
                 <h3 class="feature-heading white-text heading-margin">Оценка защиты:</h3>
-                <div class="safety-model-s__general-rating-wrapper">
-                    <div class="safety-model-s__star-rating">
-                        <p class="safety-model-s__pattern-name white-text">Спереди</p>
-                        <div class="safety-model-s__pattern-rating"></div>
+                <div class="safety-model__general-rating-wrapper">
+                    <div class="safety-model__star-rating">
+                        <p class="safety-model__pattern-name white-text">Спереди</p>
+                        <div class="safety-model__pattern-rating"></div>
                     </div>
-                    <div class="safety-model-s__star-rating">
-                        <p class="safety-model-s__pattern-name white-text">Сбоку</p>
-                        <div class="safety-model-s__pattern-rating"></div>
+                    <div class="safety-model__star-rating">
+                        <p class="safety-model__pattern-name white-text">Сбоку</p>
+                        <div class="safety-model__pattern-rating"></div>
                     </div>
-                    <div class="safety-model-s__star-rating">
-                        <p class="safety-model-s__pattern-name white-text">Сбоку <span class="secondary-text">(Стойка)</span></p>
-                        <div class="safety-model-s__pattern-rating"></div>
+                    <div class="safety-model__star-rating">
+                        <p class="safety-model__pattern-name white-text">Сбоку <span class="secondary-text">(Стойка)</span></p>
+                        <div class="safety-model__pattern-rating"></div>
                     </div>
-                    <div class="safety-model-s__star-rating">
-                        <p class="safety-model-s__pattern-name white-text">Водитель</p>
-                        <div class="safety-model-s__pattern-rating"></div>
+                    <div class="safety-model__star-rating">
+                        <p class="safety-model__pattern-name white-text">Водитель</p>
+                        <div class="safety-model__pattern-rating"></div>
                     </div>
-                    <div class="safety-model-s__star-rating">
-                        <p class="safety-model-s__pattern-name white-text">Пассажир</p>
-                        <div class="safety-model-s__pattern-rating"></div>
+                    <div class="safety-model__star-rating">
+                        <p class="safety-model__pattern-name white-text">Пассажир</p>
+                        <div class="safety-model__pattern-rating"></div>
                     </div>
                 </div>
-                <div class="safety-model-s__best-safeness-wrapper">
-                    <div class="feature safety-model-s__best-safeness white-text">
+                <div class="safety-model__best-safeness-wrapper">
+                    <div class="feature safety-model__best-safeness white-text">
                         <p class="great-little-bold-text"><span class="great-bold-text">5 звёзд</span><br>безопасности</p>
                     </div>
                 </div>
@@ -125,10 +119,10 @@
                     <a href="#" class="call-to-action__action-btn action-btn_new-order">Заказать</a>
                 </div>
             </article>
-            <div class="safety-model-s__image-wrap">
-                <div class="safety-model-s__background"></div>
-                <div class="safety-model-s__tesla-constructor-img-wrap">
-                    <img src="images/tesla-grey.png" alt="Безопасность Tesla" class="safety-model-s__tesla-constructor-img">
+            <div class="safety-model__image-wrap">
+                <div class="safety-model__background"></div>
+                <div class="safety-model__tesla-constructor-img-wrap">
+                    <img src="images/tesla-grey.png" alt="Безопасность Tesla" class="safety-model__tesla-constructor-img">
                 </div>
 
             </div>
